Fix for right-aligning items not working in Chrome.

--- a/src/sections/tool/tool.scss
+++ b/src/sections/tool/tool.scss
@@ -75,6 +75,7 @@
     &.align-right {
       justify-content: end;
       text-align: right;
+      display: block;
     }
   }
 }
